# auto-mailer

./: Cargo.toml  README.md  package.json
.github/workflow/: release.yml
.github/workflows/: build.yml  release.yml  test.yml
src/: config_reader.rs  csv_reader.rs  main.rs  template_processor.rs
src-tauri/: tauri.conf.json
src-tauri/src/: email_sender.rs
