[package]
name = "email_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
toml = "0.4.2"

[dev-dependencies]
tempfile = "3.2.0"
